--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,21 +1,21 @@
 # main links links
 main:
-  - title: "Research"
-    url: /research/
+#  - title: "Research"
+#    url: /research/
 
   - title: "Publications"
     url: /publications/
     
-  - title: "Talks"
-    url: /talks/    
+#  - title: "Talks"
+#    url: /talks/    
 
   - title: "Teaching and Services"
     url: /teaching/    
 #  - title: "Blog Posts"
 #    url: /year-archive/
 
-  - title: "COMM 616"
-    url: /comm616/
+#  - title: "COMM 616"
+#    url: /comm616/
     
 #  - title: "Guide"
 #    url: /markdown/
