--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 locale                   : "Shatin, Hong Kong"
-title                    : "He Chen"
+title                    : "Homepage"
 title_separator          : "-"
 name                     : &name "He Chen"
 description              : &description "Ph.D Student at CUHK"
