--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@
 locale                   : "Shatin, Hong Kong"
 title                    : "Homepage"
 title_separator          : "-"
-name                     : &name "He Chen"
+name                     : &name "He Chen (陈河)"
 description              : &description "Ph.D Student at CUHK"
 url                      : https://chenhe764.github.io/ # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
