--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,7 @@ analytics:
 
 # Site Author
 author:
-  name             : "He Chen (陈河)"
+  name             : "He Chen（陈河）"
   avatar           : "photo.jpg"
   bio              : "Ph.D. student at CUHK"
   location         : "Shatin, Hong Kong"
